--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Chewy:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Freckle+Face:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Electrolize:400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Audiowide" rel="stylesheet">
 	
 	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
@@ -166,11 +166,13 @@
 }
 @media only screen and (max-width: 500px) {
 	.event-name{
+		margin-top: 100px;
 		font-size: 70px;
 	}
 
-	>>>>>>> b9ab3b6a8b6ae20339f0ca1f7b8a7725902c7da6
+	/*>>>>>>> b9ab3b6a8b6ae20339f0ca1f7b8a7725902c7da6*/
 	.slogan {
+		margin-top: 150px;
 		font-size: 30px;
 	}
 
@@ -196,6 +198,10 @@
 		<h2  style="font-family:flesh;color:#F28B04;letter-spacing:1vw;" class="event-name">
 			CULRAV
 		</h2>
+		<div class="col-md-offset-4 col-md-2" style="margin-top: -20px" align="center">
+			<p style='font-size: 18px;color:white;font-family: "Audiowide",cursive;text-transform: none'>Powered By</p>
+			<img style="width: 100px;height: 100px;margin-top: -8%;" src="img/sting.jpeg" alt="Sting Energy Drinks">
+		</div>
 
 		<center><p style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-weight:300" class="slogan">
 			<i class="slogan">"A Tryst With Darkness"</i>
