--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -13,10 +13,9 @@
     <link rel="stylesheet" type="text/css" href="css/navbar.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/slider.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Fredoka+One|Comfortaa" rel="stylesheet">
 <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="pater/pater.css" />
     <link rel="stylesheet" type="text/css" href="../css/footer.css" />
     <style>
     body {
@@ -25,12 +24,13 @@
         background-attachment: fixed;
     }
     .text-center {
-        margin-top:30px;
+        margin-top:0px;
     }
-    img {
-        
-       
-    }
+   p{
+       padding-top: 10px;
+       font-size: 22px;
+       font-family: 'Comfortaa', cursive;
+   }
 .main_logo{
   
   margin-top:-2vw;
@@ -75,115 +75,116 @@
 
     <div class="container">
         <div class="row" style="margin-top: 50px;">
-            <h1 class="text-center "><b>PAST SPONSORS</b></h1>
+            <h1 class="text-center "><b>OUR SPONSORS</b></h1>
         </div>
         <div class="row margin-50">
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Agmatel.jpg" alt=""></a>
+            <div class="col-lg-offset-4 col-lg-4  col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 text-center">
+                <a href="https://www.pepsi.com/en-us/" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/pepsi.jpg" alt=""></a>
+                <p >Our Beveraging Partner</p>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/aricent.jpg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/bakh.jpg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Bikanervala.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/birla-gold.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/BSA.png" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/aricent.jpg" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/bakh.jpg" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Bikanervala.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/birla-gold.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/BSA.png" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/career.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Cola.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/dairy.jpg" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/career.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Cola.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/dairy.jpg" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/dell.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/digit.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/glozon.png" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/dell.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/digit.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/glozon.png" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/gate.jpg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/hercules.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/ims.jpeg" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/gate.jpg" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/hercules.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/ims.jpeg" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/kodak.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/koutons.jpg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/ktpl.png" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/kodak.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/koutons.jpg" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/ktpl.png" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/lazyninja.jpeg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/levi's.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Myntra.png" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/lazyninja.jpeg" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/levi's.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Myntra.png" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Nescafe.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Nimbooz.jpeg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/pepsi.png" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Nescafe.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Nimbooz.jpeg" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/pepsi.png" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/PNB.jpg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/sonata.jpg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/SBI.png" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/PNB.jpg" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/sonata.jpg" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/SBI.png" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Tata.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/time.jpg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/thinklabs.png" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/Tata.png" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/time.jpg" alt=""></a>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/thinklabs.png" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/union-bank.png" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/union-bank.png" alt=""></a>-->
+            <!--</div>-->
 
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center">
-                <a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/vijaya.png" alt=""></a>
-            </div>
+            <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
+                <!--<a href="#" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/vijaya.png" alt=""></a>-->
+            <!--</div>-->
         </div>
 
 
