Align sponsor logo

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 			</script>
 			<style type="text/css">
 
+			body{
+				overflow-y:scroll;
+			}	
+
+
 			.btn {
 				font-size: 20px;
 				height: 40px;
@@ -172,7 +177,7 @@
 
 	/*>>>>>>> b9ab3b6a8b6ae20339f0ca1f7b8a7725902c7da6*/
 	.slogan {
-		margin-top: 150px;
+		/*margin-top: 150px;*/
 		font-size: 30px;
 	}
 
@@ -198,9 +203,9 @@
 		<h2  style="font-family:flesh;color:#F28B04;letter-spacing:1vw;" class="event-name">
 			CULRAV
 		</h2>
-		<div class="col-md-offset-4 col-md-2" style="margin-top: -20px" align="center">
-			<p style='font-size: 18px;color:white;font-family: "Audiowide",cursive;text-transform: none'>Powered By</p>
-			<img style="width: 100px;height: 100px;margin-top: -8%;" src="img/sting.jpeg" alt="Sting Energy Drinks">
+		<div>
+			<p style='font-size: 18px;color:white;font-family: "Audiowide",cursive;text-transform: none'>Powered By
+			<img style="width: 100px;height: 100px;margin-top: -8%;" src="img/sting.jpeg" alt="Sting Energy Drinks"></img></p>
 		</div>
 
 		<center><p style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-weight:300" class="slogan">
