--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -70,7 +70,10 @@
 
 
     <style type="text/css">
-
+        .logoimg{
+            height: 100px;
+            width:auto;
+        }
     </style>
 
     <div class="container">
@@ -79,7 +82,7 @@
         </div>
         <div class="row margin-50">
             <div class="col-lg-offset-4 col-lg-4  col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 text-center">
-                <a href="https://www.pepsi.com/en-us/" target="_blank"> <img class="text-center hvr-bounce-in" src="logos/pepsi.jpg" alt=""></a>
+                <a href="https://www.pepsi.com/en-us/" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/pepsi.jpg" alt=""></a>
                 <p >Our Beveraging Partner</p>
             </div>
             <!--<div class="col-lg-4 col-md-6 col-sm-6 text-center">-->
