Index Page Modified

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Chewy:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Freckle+Face:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Electrolize:400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat|Audiowide" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Audiowide|Ubuntu" rel="stylesheet">
 	
 	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
@@ -109,7 +109,20 @@
 	margin-bottom: 10px;
 	line-height: 15px;
 }
-
+.header{
+        font-size: 18px;
+        color: white;
+        font-family: "Montserrat", sans-serif;
+        margin-top: 4%;
+}
+.presents{
+        font-size: 18px;
+        color: white;
+        font-family: "Montserrat", sans-serif;
+        font-style: italic;
+        text-transform: none;
+        margin-top: 2%;
+}
 @media only screen and (max-width: 900px) {
 	.event-name{
 		font-size: 90px;
@@ -128,7 +141,6 @@
 	}
 }
 @media only screen and (max-width: 700px) {
-	<<<<<<< HEAD
 
 
 	.slogan {
@@ -151,7 +163,6 @@
 		font-size: 70px;
 	}
 
-	=======
 
 
 	.slogan {
@@ -171,7 +182,7 @@
 }
 @media only screen and (max-width: 500px) {
 	.event-name{
-		margin-top: 100px;
+		margin-top: 0;
 		font-size: 70px;
 	}
 
@@ -193,6 +204,14 @@
 		font-size: 14px;
 	}
 
+        .header{
+                margin-top: 10%;
+        }
+        .presents{
+                margin-top: 2%;
+
+        }
+
 }
 </style>
 </head>
@@ -200,19 +219,21 @@
 
 
 	<div class="trigger-headline trigger-headline--hidden" style="display:flex;flex-direction: column;display:none;">
+                <div align="center" class="header">SAC MNNIT Allahabad and Vijaya Bank</div>
+                <div align="center" class="presents">presents</div>
 		<h2  style="font-family:flesh;color:#F28B04;letter-spacing:1vw;" class="event-name">
 			CULRAV
 		</h2>
 		<div>
 			<p style='font-size: 18px;color:white;font-family: "Audiowide",cursive;text-transform: none'>Powered By
-			<img style="width: 100px;height: 100px;margin-top: -8%;" src="img/sting.jpeg" alt="Sting Energy Drinks"></img></p>
+			<img style="width: 100px;height: 100px;margin-top: -8%;" src="img/sting.jpeg" alt="Sting Energy Drinks"></p>
 		</div>
 
 		<center><p style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-weight:300" class="slogan">
 			<i class="slogan">"A Tryst With Darkness"</i>
 		</p></center>
-		<p style="font-family:Chewy;color:white;letter-spacing:0.5vw;;margin-top: 5px;" class="event-date">21<sup>st</sup>-24<sup>th</sup> March 2018</p>
-		<p style="display:flex;flex-wrap: wrap;">
+		<p style="font-family:Chewy;color:white;letter-spacing:0.5vw;margin-top: 5px;" class="event-date">21<sup>st</sup>-24<sup>th</sup> March 2018</p>
+		<p style="display:flex;flex-wrap: wrap;margin-top: -30px;">
 			<center><a href="./events/index.html" id="linkToEvent"><button class="btn">Events</button></a>
 				<a href="./sponsors/index.html" id="linkToEvent"><button class="btn">Sponsors</button></a>
 				<a href="./schedule/index.html" id="linkToEvent"><button class="btn">Schedule</button></a>
@@ -236,7 +257,7 @@
 			<div class="segmenter" style="background-image: url(./img/bg6.jpg);">
 
 
-				
+
 
 			</div>
 
@@ -244,7 +265,7 @@
 
 
 
-			
+
 
 
 
