--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -31,7 +31,7 @@
     }
    p{
        padding-top: 10px;
-       font-size: 22px;
+       font-size: 26px;
        font-family: 'Comfortaa', cursive;
    }
 .main_logo{
@@ -83,48 +83,67 @@
         <div class="row" style="margin-top: 50px;">
             <h1 class="text-center "><b>OUR SPONSORS</b></h1>
         </div>
-        <div class="row margin-50">
+        <div class="row margin-50" style="margin-top: 2%">
             <!--<div class="col-lg-offset-4 col-lg-4  col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 text-center">-->
                 <!--<a href="https://www.pepsi.com/en-us/" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/pepsi.jpg" alt=""></a>-->
                 <!--<p >Our Beveraging Partner</p>-->
             <!--</div>-->
+            <div class="col-md-12" align="center"><p>Food Partner</p></div>
             <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/vijaya.png" alt=""></a>
+                <a href="https://online.pizzahut.co.in/" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/pizza_hut.jpg" alt=""></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6  text-center logo_div">
+                <a href="https://www.golivadapav.com/" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/goli_vada.jpg" alt=""></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6  text-center logo_div">
+                <a href="#"> <img class="text-center  logoimg hvr-bounce-in" src="logos/blackout.jpg" alt=""></a>
+            </div>
+            <div class="col-lg-12 col-md-6 col-sm-6 text-center logo_div">
+                <a href="http://motimahal.in/" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/moti_mahal.jpg" alt="Moti Mahal Delux"></a>
+            </div>
+            <div class="col-md-12" align="center"><p>Media Partner</p></div>
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
+                <a href="http://collegedesk.in/" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/Collegedesk.jpg" alt=""></a>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/ola_logo.jpg" alt=""></a>
+                <a href="http://festpav.com/" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/festPav_logo.jpg" alt=""></a>
             </div>
-            <div class="col-lg-4  col-md-6  col-sm-6 text-center logo_div">
+            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
+                <a href="https://www.redfmindia.in/" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/redFM_logo.jpg" alt=""></a>
+            </div>
+            <div class="col-lg-12 col-md-6 col-sm-6 text-center logo_div" align="center">
+                <a href="https://www.jagran.com/" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/dainik_inext.jpg" alt=""></a>
+            </div>
+            <div class="col-md-12" align="center"><p>Beverage Partner</p></div>
+            <div class="col-md-12 text-center logo_div">
                 <a href="https://www.pepsi.com/en-us/" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/pepsi.jpg" alt="Pepsico"></a>
-                <p >Our Beveraging Partner</p>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/ananda.jpg" alt="Image Ananda"></a>
+            <div class="col-md-12" align="center"><p>Coupon Partner</p></div>
+            <div class="col-md-12 text-center logo_div">
+                <a href="https://www.grabon.in/" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/grabon_logo.jpg" alt=""></a>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/festPav_logo.jpg" alt=""></a>
+            <div class="col-md-12" align="center"><p>Travel Partner</p></div>
+            <div class="col-md-12 text-center logo_div">
+                <a href="https://www.olacabs.com/" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/ola_logo.jpg" alt=""></a>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/jagran.jpg" alt=""></a>
+            <div class="col-md-12" align="center"><p>Styling Partner</p></div>
+            <div class="col-md-12 text-center logo_div">
+                <a href="https://www.vlccwellness.com/India/" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/vlcc.jpg" alt=""></a>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/redFM_logo.jpg" alt=""></a>
+            <div class="col-md-12" align="center"><p>Training Partner</p></div>
+            <div class="col-md-12 text-center logo_div">
+                <a href="http://www.cetpainfotech.com/" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/cetpa.jpg" alt=""></a>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/grabon_logo.jpg" alt=""></a>
+            <div class="col-md-12" align="center"><p>Real Estate Partners</p></div>
+            <div class="col-md-12 text-center logo_div">
+                <a href="https://www.omaxe.com/" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/omaxe.jpg" alt=""></a>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/blackout.jpg" alt=""></a>
+            <div class="col-md-12" align="center"><p>Other Sponsors</p></div>
+            <div class="col-lg-6 col-md-6 col-sm-6 text-center logo_div">
+                <a href="https://www.vijayabank.com/" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/vijaya.png" alt=""></a>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center  logoimg hvr-bounce-in" src="logos/goli_vada.jpg" alt=""></a>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/vlcc.jpg" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 text-center logo_div">
-                <a href="#" target="_blank"> <img class="text-center logoimg hvr-bounce-in" src="logos/moti_mahal.jpg" alt="Moti Mahal Delux"></a>
+            <div class="col-lg-6 col-md-6 col-sm-6 text-center logo_div">
+                <a href="#"> <img class="text-center logoimg hvr-bounce-in" src="logos/ananda.jpg" alt="Image Ananda"></a>
             </div>
         </div>
 
