--- a/events/index.html
+++ b/events/index.html
@@ -141,6 +141,11 @@
 	<h2 class="pieces-slider__text">MNNIT MUN 2018</h2>
 </div>
 </a>
+<a href="#"><div class="pieces-slider__slide">
+		<img class="pieces-slider__image" src="img/edmnight.jpg" alt="">
+		<h2 class="pieces-slider__text">EDM Night</h2>
+	</div>
+</a>
 <!-- Canvas to draw the pieces -->
 <canvas class="pieces-slider__canvas"></canvas>
 <!-- Slider buttons: prev and next -->
